--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "@types/react-router-dom": "^5.3.3",
+    "use-fireproof": "^0.13.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
