--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@fireproof/ipfs": "^0.13.4",
     "@types/react-router-dom": "^5.3.3",
+    "openai": "^4.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "use-fireproof": "^0.14.0"
+    "use-fireproof": "^0.14.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
